Automatically generate front-matter
If the org file doesn't already output YAML front-matter for jekyll to
the top of the output file, it will be generated from the org document
properties.

--- a/example/basic-page.org
+++ b/example/basic-page.org
@@ -1,8 +1,5 @@
-#+BEGIN_HTML
----
-title: Basic Page
----
-#+END_HTML
+#+TITLE: Basic Page
+#+AUTHOR: Correl J. Roush <correl@gmail.com>
 
 * Publish your documents
   ~org-publish.mk~ exports your org files to HTML and uses Jekyll to
